[package]
name = "rust_rest_client"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_rest_client"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
dashmap = "6.1.0"
once_cell = "1.21.3"
num_cpus = "1.17.0"
threadpool = "1.8.1"
indexmap = "2.12.1"
chrono  = "0.4.42"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
